--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 footer__copyright">
-					<p>Copyright &copy {{ .Now.Year }} {{ .Site.Params.Name }}</p>
+					<p>Copyright &copy {{ now.Year }} {{ .Site.Params.Name }}</p>
 				</div>
 				<div class="cl-xs-12 col-sm-6 footer__links">
 					<ul class="list-inline">
